add homework 2